# EngineT

./: .gitignore  AIComponent.cpp  AnimationComponent.cpp  AnimationComponent.h  AttackComponent.cpp  AttackComponent.h  CMakeLists.txt  CameraController.cpp  CollisionComponent.cpp  CollisionComponent.h  Component.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  ForceComponent.h  GameController.cpp  GameController.h  HealthComponent.cpp  HealthComponent.h  Map.h  PlayerComponent.cpp  PlayerComponent.h  PrefabManager.cpp  PrefabManager.h  README.md  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h  Vector2D.cpp  Vector2D.h  main.cpp  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
EngineT/: CMakeLists.txt  EngineT.cpp  EngineT.h
EngineT/api/: ComponentsAPI.h  CoreAPI.cpp  CoreAPI.h  EntityAPI.cpp
EngineT/components/: AIComponent.cpp  AnimationComponent.h  CollisionComponent.cpp  CollisionComponent.h  Components.h  HealthComponent.cpp  HealthComponent.h  PlayerComponent.cpp  SpriteComponent.cpp
EngineT/core/: CameraController.h  Entity.h  EntityManager.cpp  EntityManager.h  GameController.cpp  GameController.h  PrefabManager.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp
example/: EntityFactory.py  MapLoader.py  map.json  minimalExample.py  sampleGame.py
lib/: CONF.h  EngineJ.cpp  EngineT.cpp
lib/api/: ComponentsAPI.cpp  ComponentsAPI.h  CoreAPI.cpp  CoreAPI.h  EntityAPI.h
lib/components/: AIComponent.h  AnimationComponent.cpp  AnimationComponent.h  AttackComponent.cpp  AttackComponent.h  CollisionComponent.h  Component.h  ForceComponent.cpp  ForceComponent.h  HealthComponent.h  PlayerComponent.h  Renderable.h  SpriteComponent.cpp  SpriteComponent.h  Terrain.h  Transform.h  TransformComponent.cpp  TransformComponent.h
lib/core/: CameraController.cpp  CameraController.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameController.cpp  GameController.h  PrefabManager.cpp  ResourceManager.h  TextureManager.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
lib/systems/: PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h
lib/types/: Chunk.h  Tile.h
maps/: 2.json
pyenginet/: CMakeLists.txt  ComponentType.h  ComponentType.py  Entity.py  __init__.py  _pyenginet.c  components.py
